Resolve overlapping problems with the last two blocks that were visible in high resolution screens

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -322,6 +322,8 @@ select {
 #install-frame-after {
   border-bottom: solid 1px #e3e3e3;
   margin-bottom: 2.5%;
+  clear: both;
+  margin-top: 3rem;
 }
 .first_item {
   margin-top: 3%;
@@ -703,6 +705,15 @@ ul.feature-icons {
   margin-top: 20px;
   max-width: 80%;
 }
+.three-icon-frame {
+  clear: both;
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+
 .four-icons-title:link {
   color: $dark-grey;
   margin-bottom: 5px;
